--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
   <header class="site-header">
-    <h1>正念音频</h1>
-    <p class="subtitle">清晰 · 简约 · 易用</p>
+    <h1>正念音频分享</h1>
   </header>
 
   <main class="container">
@@ -22,7 +21,7 @@
           <a class="card-link" href="waking-up.html">
             <div class="card-body">
               <div class="card-title">醒来 - 50天冥想入门</div>
-              <div class="card-meta">50 天 · 简短日常练习</div>
+              <div class="card-meta">每日简短练习 · 循序渐进</div>
             </div>
             <div class="card-arrow" aria-hidden>›</div>
           </a>
