--- a/waking-up.html
+++ b/waking-up.html
@@ -20,6 +20,11 @@
   </header>
 
   <main class="container">
+    <section class="before-grid">
+      <p style="text-align:center; margin: 8px 0 14px;">
+        <a class="link" href="waking-up-terms.html">醒来：翻译录制说明</a>
+      </p>
+    </section>
     <section>
       <ul class="day-grid" id="day-list" aria-label="章节列表"></ul>
     </section>
